# libjsjson

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: CMakeLists.txt  jsonObject.cpp  jsonObject.h  jsonSerialisation.cpp  jsonSerialisation.h
tests/: CMakeLists.txt  basic_string_parsing_tests.cpp  json_error_handling_tests.cpp  json_object_creation_tests.cpp
